--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,13 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
+      - name: Find APK
+        run: find . -name "*.apk"
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: Built-APK
-          path: app/build/outputs/**/**/*.apk  # Find all APKs automatically
+          path: '**/*.apk'  # Search for APKs in all folders
+
 
