--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,18 +20,19 @@ jobs:
           java-version: '17'
 
       - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDebug --stacktrace
 
       - name: Find APK
-        run: find . -name "*.apk"
+        run: find app/build/outputs -name "*.apk" || echo "No APK found"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: Built-APK
-          path: '**/*.apk'  # Search for APKs in all folders
+          path: app/build/outputs/apk/debug/app-debug.apk
+
 
 
