--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug --stacktrace
 
-      - name: List APK files
-        run: ls -R app/build/outputs/
+      - name: List Project Structure
+        run: ls -R
 
       - name: Find APK
         run: find app/build/outputs -name "*.apk" || echo "No APK found"
