--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,10 @@ jobs:
         run: ls -R
 
       - name: Find APK
-        run: find app/build/outputs -name "*.apk" || echo "No APK found"
+        run: find . -name "*.apk" || echo "No APK found"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: Built-APK
-          path: app/build/outputs/apk/debug/app-debug.apk
-
+          path: '**/*.apk'
